[package]
name = "earth"
version = "0.0.1"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "earth/main.rs"
name = "earth"

[dependencies]
clap = { features = ["yaml"] }
network = { path = "network" }
mock_data = { path = "mock_data" }
database = { path = "database" }
blockchain = { path = "blockchain" }
p2p = { path = "p2p" }
rocksdb = "0.12.4"
serde = { version = "1.0.102", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
reqwest = "0.9.22"
criterion = "0.3"
tokio-core = "0.1.6"
