[package]
name = "earth"
version = "0.0.1"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "earth/main.rs"
name = "earth"

[dependencies]
blockchain = { path = "blockchain" }
clap = { features = ["yaml"] }
configuration = { path = "configuration" }
database = { path = "database" }
mock_data = { path = "mock_data" }
network = { path = "network" }
p2p = { path = "p2p" }
subcommands = { path = "subcommands" }
# rocksdb = "0.12.4"
serde = { version = "1.0.102", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
reqwest = "0.9.22"
criterion = "0.3"
tokio-core = "0.1.17"
ns-dns-tokio = "0.4.0"
abstract-ns = "0.4.3"
futures = "0.3.1"
domain = "0.4.0"
better-panic = "0.2.0"