[package]
name = "chain"
version = "0.1.0"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

[dependencies]
rustc-hex = "2"
heapsize = "0.4"
rayon = "1.0"
serde_derive = "1.0.102"
serde = { version = "1.0.102", features = ["derive"] }
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }

[features]
default = []
test-helpers = []
