[package]
name = "message"
version = "0.1.0"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
serde_derive = "1.0.102"
serde = { version = "1.0.102", features = ["derive"] }
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
network = { path = "../network" }
