[package]
name = "mock_data"
version = "0.1.0"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
reqwest = "0.9.22"
blockchain = { path = "../blockchain" }
