[package]
name = "p2p"
version = "0.1.0"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network" }
tokio-core = "0.1.17"
ns-dns-tokio = "0.4.0"
abstract-ns = "0.4.3"
futures = "0.3.1"
domain = "0.4.0"